; ModuleID = '/home/carl/AnghaBench/linux/net/ceph/extr_osdmap.c_calc_pg_masks.c'
source_filename = "/home/carl/AnghaBench/linux/net/ceph/extr_osdmap.c_calc_pg_masks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ceph_pg_pool_info = type { i32, i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ceph_pg_pool_info*)* @calc_pg_masks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @calc_pg_masks(%struct.ceph_pg_pool_info* %0) #0 {
  %2 = alloca %struct.ceph_pg_pool_info*, align 8
  store %struct.ceph_pg_pool_info* %0, %struct.ceph_pg_pool_info** %2, align 8
  %3 = load %struct.ceph_pg_pool_info*, %struct.ceph_pg_pool_info** %2, align 8
  %4 = getelementptr inbounds %struct.ceph_pg_pool_info, %struct.ceph_pg_pool_info* %3, i32 0, i32 3
  %5 = load i64, i64* %4, align 8
  %6 = sub nsw i64 %5, 1
  %7 = call i32 @calc_bits_of(i64 %6)
  %8 = shl i32 1, %7
  %9 = sub nsw i32 %8, 1
  %10 = load %struct.ceph_pg_pool_info*, %struct.ceph_pg_pool_info** %2, align 8
  %11 = getelementptr inbounds %struct.ceph_pg_pool_info, %struct.ceph_pg_pool_info* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 8
  %12 = load %struct.ceph_pg_pool_info*, %struct.ceph_pg_pool_info** %2, align 8
  %13 = getelementptr inbounds %struct.ceph_pg_pool_info, %struct.ceph_pg_pool_info* %12, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = sub nsw i64 %14, 1
  %16 = call i32 @calc_bits_of(i64 %15)
  %17 = shl i32 1, %16
  %18 = sub nsw i32 %17, 1
  %19 = load %struct.ceph_pg_pool_info*, %struct.ceph_pg_pool_info** %2, align 8
  %20 = getelementptr inbounds %struct.ceph_pg_pool_info, %struct.ceph_pg_pool_info* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  ret void
}

declare dso_local i32 @calc_bits_of(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
